[package]
name = "yum-osu"
version = "0.3.0"
edition = "2021"
authors = ["Yumshot <https://github.com/Yumshot>"]
description = "A cyberpunk-styled rhythm game inspired by OSU!"
license = "MIT"
repository = "https://github.com/Yumshot/yum-osu"

[dependencies]
macroquad = "0.4"
rand = "0.8.5"
rodio = "0.17"
aubio = "0.2.1"
biquad = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
password-hash = { version = "0.5", features = ["rand_core"] }
argon2 = "0.5"
anyhow = "1.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
