[package]
name = "yum-osu"
version = "0.3.0"
edition = "2021"
authors = ["Yumshot <https://github.com/Yumshot>"]
description = "A cyberpunk-styled rhythm game inspired by OSU!"
license = "MIT"
repository = "https://github.com/Yumshot/yum-osu"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
rand = "0.8.5"
rodio = "0.17"
aubio = "0.2.1"
biquad = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
